// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelfServiceStatsPage /> should display the loader on loading 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="inner"
      style="min-height: 500px;"
    >
      <i
        class="icon-custom icon-circle-o-notch md-spin"
        style="font-size: 40px;"
      />
    </div>
  </div>
</div>
`;

exports[`<SelfServiceStatsPage /> should render the automation add-on upgrade paywall if the current account doesnt have the feature 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="align-items-center"
      >
        <span>
          Self-service
        </span>
        <button
          class="wrapper wrapper ml-3 fill secondary medium"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              info_outline
            </i>
            Learn
          </span>
        </button>
      </h1>
    </div>
    <div
      class="page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center mx-0 row"
        >
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview default col-12 col-lg-6 col-xl-6"
          >
            <div
              class=""
            >
              <img
                alt="Feature preview"
                class="img-fluid"
                src="/static/private/js/assets/img/paywalls/screens/self-service-statistics.png"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <div
                  class="badge"
                >
                  Automation Add-on
                </div>
              </div>
              <h1
                class="contentTitle"
              >
                Track self-service’s interactions
              </h1>
              <div
                class="description"
              >
                <p>
                  <div>
                    Activate 
                    <b>
                      self-service
                    </b>
                     and see the number of your customers’ requests passing through it and how many of these interactions you are 
                    <b>
                      automating!
                    </b>
                  </div>
                </p>
              </div>
              <div
                class="upgradeButton"
              >
                <div>
                  <div
                    class="d-flex align-items-center upgradeLink"
                  >
                    <a
                      to="[object Object]"
                    >
                      <button
                        class="wrapper fill primary medium"
                        type="button"
                      >
                        <span
                          class="wrapper"
                        >
                          Upgrade
                          <i
                            class="material-icons icon isRight medium"
                          >
                            auto_awesome
                          </i>
                        </span>
                      </button>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelfServiceStatsPage /> should render the filters and stats when stats filters are defined 1`] = `
<div
  class="full-width wrapper"
>
  <div
    class="header"
    data-candu-id="stat-header-container"
  >
    <div
      class="page-header pageHeader mb-0"
    >
      <h1
        class="align-items-center"
      >
        <span>
          Self-service
        </span>
        <button
          class="wrapper wrapper ml-3 fill secondary medium"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              info_outline
            </i>
            Learn
          </span>
        </button>
      </h1>
      <div>
        <div
          class="d-flex flex-wrap float-right"
        >
          <div
            class="dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
              type="button"
            >
              <span>
                1 store
              </span>
            </button>
            <div
              aria-hidden="true"
              class="dropdown dropdown-menu dropdown-menu-right"
              role="menu"
              tabindex="-1"
            >
              <h6
                class="dropdown-item-input dropdownItemInput dropdown-header"
                tabindex="-1"
              >
                <input
                  class="form-control"
                  placeholder="Search stores..."
                  type="text"
                  value=""
                />
              </h6>
              <button
                class="component dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <div
                  class="checkbox"
                >
                  <label
                    class="label label quickSelectionOption"
                    for="checkbox-2"
                  >
                    <input
                      checked=""
                      class="input"
                      id="checkbox-2"
                      name="checkbox-2"
                      type="checkbox"
                    />
                    Deselect
                    <div
                      class="badge badge--unselect"
                    >
                      1
                    </div>
                  </label>
                </div>
              </button>
              <div
                class="dropdownDivider dropdown-divider"
                tabindex="-1"
              />
              <div
                class="content"
              />
            </div>
          </div>
          <div>
            <button
              class="wrapper fill secondary medium"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  calendar_today
                </i>
                <span
                  class="wrapper"
                >
                  Feb 02, 2021 - Feb 03, 2021
                  <i
                    class="material-icons icon isRight medium"
                  >
                    arrow_drop_down
                  </i>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="statsWrapper"
  >
    <div
      class="statsContainer container-fluid"
    >
      <div
        class="wrapper"
      >
        <div
          class="metrics"
        >
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Self-service interactions via chat
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-chat_self_service_interaction_count-0"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  3,302
                </div>
                <span
                  class="diff"
                  id="value-chat_self_service_interaction_count-0"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference negative"
                    >
                      arrow_downward
                    </i>
                    -57
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Self-service interactions (% of chat tickets)
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-chat_self_service_interaction_ratio-1"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  99%
                </div>
                <span
                  class="diff"
                  id="value-chat_self_service_interaction_ratio-1"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference negative"
                    >
                      arrow_downward
                    </i>
                    -1
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Self-service interactions via help center
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-help_center_self_service_interaction_count-2"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  754
                </div>
                <span
                  class="diff"
                  id="value-help_center_self_service_interaction_count-2"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference positive"
                    >
                      arrow_upward
                    </i>
                    81
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Automated interactions
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-automated_interaction_count-3"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  713
                </div>
                <span
                  class="diff"
                  id="value-automated_interaction_count-3"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference negative"
                    >
                      arrow_downward
                    </i>
                    -64
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Automated interactions (% of total)
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-automated_interaction_ratio-4"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  17%
                </div>
                <span
                  class="diff"
                  id="value-automated_interaction_ratio-4"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference negative"
                    >
                      arrow_downward
                    </i>
                    -30
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Self-service flows distribution
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <div
          class="row"
        >
          <div
            class="mb-4 legend-wrapper col"
          >
            <div
              class="legends"
            >
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(74, 141, 249);"
                />
                Track (automated)
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(36, 214, 157);"
                />
                Report issue
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(128, 136, 214);"
                />
                Return
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(253, 155, 90);"
                />
                Cancel
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(197, 147, 164);"
                />
                Quick response
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(210, 215, 222);"
                />
                Chat tickets
              </span>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-md-8 col-lg-9"
          >
            <div>
              <canvas
                height="360"
                role="img"
                width="300"
              />
            </div>
          </div>
          <div
            class="col-sm-12 col-md-4 col-lg-3"
          >
            <div
              class="bar-total-wrapper"
            >
              <div
                class="bar-total-title-wrapper"
              >
                <h5>
                  Total chat interactions
                </h5>
                <span>
                  <i
                    class="material-icons ml-2 helpIcon"
                    id="normalized-bar-title-tooltip"
                  >
                    info_outline
                  </i>
                </span>
              </div>
              <div
                class="bar-total-dates"
              >
                Jan 5th -
                                  Jan 11th
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(74, 141, 249);"
                  />
                  Track (automated)
                </div>
                <div
                  class="data"
                >
                  3
                   (
                  60
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(36, 214, 157);"
                  />
                  Report issue
                </div>
                <div
                  class="data"
                >
                  0
                   (
                  0
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(128, 136, 214);"
                  />
                  Return
                </div>
                <div
                  class="data"
                >
                  0
                   (
                  0
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(253, 155, 90);"
                  />
                  Cancel
                </div>
                <div
                  class="data"
                >
                  0
                   (
                  0
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(197, 147, 164);"
                  />
                  Quick response
                </div>
                <div
                  class="data"
                >
                  0
                   (
                  0
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(210, 215, 222);"
                  />
                  Chat tickets
                </div>
                <div
                  class="data"
                >
                  2
                   (
                  40
                  %)
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Self-service flows distribution
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <div
          class="row"
        >
          <div
            class="mb-4 legend-wrapper col"
          >
            <div
              class="legends"
            >
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(74, 141, 249);"
                />
                Track (automated)
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(36, 214, 157);"
                />
                Report issue
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(128, 136, 214);"
                />
                Return
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(253, 155, 90);"
                />
                Cancel
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(156, 224, 224);"
                />
                quick_responses
              </span>
              <span
                class="label mr-4 mb-2"
              >
                <span
                  class="circle mr-2"
                  style="background: rgb(34, 146, 199);"
                />
                other_tickets
              </span>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-md-8 col-lg-9"
          >
            <div>
              <canvas
                height="360"
                role="img"
                width="300"
              />
            </div>
          </div>
          <div
            class="col-sm-12 col-md-4 col-lg-3"
          >
            <div
              class="bar-total-wrapper"
            >
              <div
                class="bar-total-title-wrapper"
              >
                <h5>
                  Total help center interactions
                </h5>
                <span>
                  <i
                    class="material-icons ml-2 helpIcon"
                    id="normalized-bar-title-tooltip"
                  >
                    info_outline
                  </i>
                </span>
              </div>
              <div
                class="bar-total-dates"
              >
                Jan 5th -
                                  Jan 11th
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(74, 141, 249);"
                  />
                  Track (automated)
                </div>
                <div
                  class="data"
                >
                  3
                   (
                  60
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(36, 214, 157);"
                  />
                  Report issue
                </div>
                <div
                  class="data"
                >
                  0
                   (
                  0
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(128, 136, 214);"
                  />
                  Return
                </div>
                <div
                  class="data"
                >
                  0
                   (
                  0
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(253, 155, 90);"
                  />
                  Cancel
                </div>
                <div
                  class="data"
                >
                  0
                   (
                  0
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(156, 224, 224);"
                  />
                  quick_responses
                </div>
                <div
                  class="data"
                >
                  0
                   (
                  0
                  %)
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background: rgb(34, 146, 199);"
                  />
                  other_tickets
                </div>
                <div
                  class="data"
                >
                  2
                   (
                  40
                  %)
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <h3
        class="section"
      >
        Report issues flow
      </h3>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Products with most issues
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <table
          class="table table table-hover"
        >
          <thead>
            <tr>
              <th
                class="product"
              >
                <span
                  class="cell-wrapper"
                >
                  PRODUCT
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  TOTAL ISSUES REPORTED
                </span>
              </th>
              <th
                class="string"
              >
                <span
                  class="cell-wrapper"
                >
                  ISSUE
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="lineCell product link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="product-image"
                      style="background-image: url(https://cdn.shopify.com/s/files/1/0518/0525/7901/products/ezgif-1-5cb6817b37ad_100x100.jpg?v=1607704148);"
                    />
                    <h5
                      class="product-name"
                    >
                      Hoodie - M
                    </h5>
                  </div>
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  2
                </span>
              </td>
              <td
                class="lineCell string link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <span
                    class="fit-cell"
                  >
                    I'm past my expected delivery date
                  </span>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Top order issues reported
            <span>
              <i
                class="material-icons ml-2 helpIcon"
                id="tooltip-self-service-top-reported-issues"
              >
                info_outline
              </i>
            </span>
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <table
          class="table table table-hover"
        >
          <thead>
            <tr>
              <th
                class="issue-reason"
              >
                <span
                  class="cell-wrapper"
                >
                  ISSUE
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  TICKETS CREATED
                </span>
              </th>
              <th
                class="percent"
              >
                <span
                  class="cell-wrapper"
                >
                  % OF ISSUES REPORTED
                  <span
                    class="axisHelperIcon"
                  >
                    <i
                      class="material-icons ml-2 helpIcon"
                      id="percent-of-issues-reported-tooltip"
                    >
                      info_outline
                    </i>
                  </span>
                </span>
              </th>
              <th
                class="delta"
              >
                <span
                  class="cell-wrapper"
                >
                  DELTA
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="lineCell issue-reason link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <h5
                    style="margin: 0px;"
                  >
                    I'm past my expected delivery date
                  </h5>
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  3
                </span>
              </td>
              <td
                class="lineCell percent link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  30%
                </span>
              </td>
              <td
                class="lineCell delta link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <span>
                    <span
                      id="difference-0"
                    >
                      <span>
                        <i
                          class="material-icons mr-1 statsDifference positive"
                        >
                          arrow_upward
                        </i>
                        200
                        %
                      </span>
                    </span>
                  </span>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <h3
        class="section"
      >
        Returns flow
      </h3>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Products with most return requests
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <table
          class="table table table-hover"
        >
          <thead>
            <tr>
              <th
                class="product"
              >
                <span
                  class="cell-wrapper"
                >
                  PRODUCT
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  RETURN REQUESTS
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="lineCell product link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="product-image"
                      style="background-image: url(https://cdn.shopify.com/s/files/1/0518/0525/7901/products/RadHat_100x100.png?v=1608219661);"
                    />
                    <h5
                      class="product-name"
                    >
                      Hat
                    </h5>
                  </div>
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  6
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelfServiceStatsPage /> should render the stats variant when the SelfServiceStatsV2 feature flag is truthy 1`] = `
<div
  class="full-width wrapper"
>
  <div
    class="header"
    data-candu-id="stat-header-container"
  >
    <div
      class="page-header pageHeader mb-0"
    >
      <h1
        class="align-items-center"
      >
        <span>
          Self-service
        </span>
        <button
          class="wrapper wrapper ml-3 fill secondary medium"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              info_outline
            </i>
            Learn
          </span>
        </button>
      </h1>
      <div>
        <div
          class="d-flex flex-wrap float-right"
        >
          <div
            class="dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
              type="button"
            >
              <span>
                1 store
              </span>
            </button>
            <div
              aria-hidden="true"
              class="dropdown dropdown-menu dropdown-menu-right"
              role="menu"
              tabindex="-1"
            >
              <h6
                class="dropdown-item-input dropdownItemInput dropdown-header"
                tabindex="-1"
              >
                <input
                  class="form-control"
                  placeholder="Search stores..."
                  type="text"
                  value=""
                />
              </h6>
              <button
                class="component dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <div
                  class="checkbox"
                >
                  <label
                    class="label label quickSelectionOption"
                    for="checkbox-4"
                  >
                    <input
                      checked=""
                      class="input"
                      id="checkbox-4"
                      name="checkbox-4"
                      type="checkbox"
                    />
                    Deselect
                    <div
                      class="badge badge--unselect"
                    >
                      1
                    </div>
                  </label>
                </div>
              </button>
              <div
                class="dropdownDivider dropdown-divider"
                tabindex="-1"
              />
              <div
                class="content"
              />
            </div>
          </div>
          <div>
            <button
              class="wrapper fill secondary medium"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  calendar_today
                </i>
                <span
                  class="wrapper"
                >
                  Feb 02, 2021 - Feb 03, 2021
                  <i
                    class="material-icons icon isRight medium"
                  >
                    arrow_drop_down
                  </i>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="statsWrapper"
  >
    <div
      class="statsContainer container-fluid"
    >
      <div
        class="wrapper"
      >
        <div
          class="metrics"
        >
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Total Self-service interactions
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-total_self_service_interaction_count-0"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  4,875
                </div>
                <span
                  class="diff"
                  id="value-total_self_service_interaction_count-0"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference negative"
                    >
                      arrow_downward
                    </i>
                    -41
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Self-service automation rate
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-self_service_automation_rate-1"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  43%
                </div>
                <span
                  class="diff"
                  id="value-self_service_automation_rate-1"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference positive"
                    >
                      arrow_upward
                    </i>
                    22
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Automated Self-service interactions
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-automated_self_service_interaction_count-2"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  2,129
                </div>
                <span
                  class="diff"
                  id="value-automated_self_service_interaction_count-2"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference negative"
                    >
                      arrow_downward
                    </i>
                    -26
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Served by an agent after Self-service
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-not_automated_self_service_interaction_count-3"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  2,746
                </div>
                <span
                  class="diff"
                  id="value-not_automated_self_service_interaction_count-3"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference positive"
                    >
                      arrow_downward
                    </i>
                    -48
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Self-service volume per flow
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-md-8 col-lg-9"
          >
            <div>
              <canvas
                height="360"
                role="img"
                width="300"
              />
            </div>
          </div>
          <div
            class="col-sm-12 col-md-4 col-lg-3"
          >
            <div
              class="bar-total-wrapper"
            >
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(29, 120, 107);"
                  />
                  Quick response
                </div>
                <div
                  class="data"
                >
                  611
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(0, 24, 116);"
                  />
                  Article recommendation
                </div>
                <div
                  class="data"
                >
                  423
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(74, 141, 249);"
                  />
                  Track order
                </div>
                <div
                  class="data"
                >
                  302
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(116, 181, 16);"
                  />
                  Report order issue
                </div>
                <div
                  class="data"
                >
                  587
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(143, 44, 175);"
                  />
                  Return order
                </div>
                <div
                  class="data"
                >
                  484
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(235, 98, 96);"
                  />
                  Cancel order
                </div>
                <div
                  class="data"
                >
                  51
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Quick response performance
            <span>
              <i
                class="material-icons ml-2 helpIcon"
                id="tooltip-self-service-quick-response-performance"
              >
                info_outline
              </i>
            </span>
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <table
          class="table table table-hover"
        >
          <thead>
            <tr>
              <th
                class="title"
              >
                <span
                  class="cell-wrapper"
                >
                  QUICK RESPONSE
                </span>
              </th>
              <th
                class="quick-response-automation-rate"
              >
                <span
                  class="cell-wrapper"
                >
                  AUTOMATION RATE
                  <span
                    class="axisHelperIcon"
                  >
                    <i
                      class="material-icons ml-2 helpIcon"
                      id="Automation-rate-tooltip-self-service-quick-response-performance"
                    >
                      info_outline
                    </i>
                  </span>
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  AUTOMATED BY QUICK RESPONSE
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  SERVED BY AN AGENT AFTER QUICK RESPONSE
                  <span
                    class="axisHelperIcon"
                  >
                    <i
                      class="material-icons ml-2 helpIcon"
                      id="Served-by-an-agent-after-quick-response-tooltip-self-service-quick-response-performance"
                    >
                      info_outline
                    </i>
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="lineCell title link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  How do I pick the right size?
                </span>
              </td>
              <td
                class="lineCell quick-response-automation-rate link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  86
                  %
                   
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  750
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  116
                </span>
              </td>
            </tr>
            <tr>
              <td
                class="lineCell title link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  What is your shipping policy?
                </span>
              </td>
              <td
                class="lineCell quick-response-automation-rate link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  85
                  %
                   
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  417
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  68
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Article recommendation performance
            <span>
              <i
                class="material-icons ml-2 helpIcon"
                id="tooltip-self-service-article-recommendation-performance"
              >
                info_outline
              </i>
            </span>
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <table
          class="table table table-hover"
        >
          <thead>
            <tr>
              <th
                class="title-with-link"
              >
                <span
                  class="cell-wrapper"
                >
                  ARTICLE
                </span>
              </th>
              <th
                class="article-recommendation-automation-rate"
              >
                <span
                  class="cell-wrapper"
                >
                  AUTOMATION RATE
                  <span
                    class="axisHelperIcon"
                  >
                    <i
                      class="material-icons ml-2 helpIcon"
                      id="Automation-rate-tooltip-self-service-article-recommendation-performance"
                    >
                      info_outline
                    </i>
                  </span>
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  AUTOMATED BY ARTICLE REC
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  SERVED BY AN AGENT AFTER ARTICLE REC
                  <span
                    class="axisHelperIcon"
                  >
                    <i
                      class="material-icons ml-2 helpIcon"
                      id="Served-by-an-agent-after-article-rec-tooltip-self-service-article-recommendation-performance"
                    >
                      info_outline
                    </i>
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="lineCell title-with-link link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  Care instructions
                   
                  <a
                    class="material-icons-outlined openArticle"
                    href="https://trueclassictees.gorgias.help/en-US/care-instructions-78902"
                    rel="noreferrer"
                    target="_blank"
                  >
                    open_in_new
                  </a>
                </span>
              </td>
              <td
                class="lineCell article-recommendation-automation-rate link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  16
                  %
                   
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  12
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  60
                </span>
              </td>
            </tr>
            <tr>
              <td
                class="lineCell title-with-link link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  Loyalty Program
                   
                  <a
                    class="material-icons-outlined openArticle"
                    href="https://trueclassictees.gorgias.help/en-US/loyalty-program-78905"
                    rel="noreferrer"
                    target="_blank"
                  >
                    open_in_new
                  </a>
                </span>
              </td>
              <td
                class="lineCell article-recommendation-automation-rate link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  14
                  %
                   
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  21
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  126
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Top order issues reported
            <span>
              <i
                class="material-icons ml-2 helpIcon"
                id="tooltip-self-service-top-reported-issues"
              >
                info_outline
              </i>
            </span>
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <table
          class="table table table-hover"
        >
          <thead>
            <tr>
              <th
                class="issue-reason"
              >
                <span
                  class="cell-wrapper"
                >
                  ISSUE
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  TICKETS CREATED
                </span>
              </th>
              <th
                class="percent"
              >
                <span
                  class="cell-wrapper"
                >
                  % OF ISSUES REPORTED
                  <span
                    class="axisHelperIcon"
                  >
                    <i
                      class="material-icons ml-2 helpIcon"
                      id="percent-of-issues-reported-tooltip"
                    >
                      info_outline
                    </i>
                  </span>
                </span>
              </th>
              <th
                class="delta"
              >
                <span
                  class="cell-wrapper"
                >
                  DELTA
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="lineCell issue-reason link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <h5
                    style="margin: 0px;"
                  >
                    I'm past my expected delivery date
                  </h5>
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  3
                </span>
              </td>
              <td
                class="lineCell percent link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  30%
                </span>
              </td>
              <td
                class="lineCell delta link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <span>
                    <span
                      id="difference-0"
                    >
                      <span>
                        <i
                          class="material-icons mr-1 statsDifference positive"
                        >
                          arrow_upward
                        </i>
                        200
                        %
                      </span>
                    </span>
                  </span>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Products with most issues and return requests
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <table
          class="table table table-hover"
        >
          <thead>
            <tr>
              <th
                class="product"
              >
                <span
                  class="cell-wrapper"
                >
                  PRODUCT
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  TOTAL ISSUES REPORTED
                </span>
              </th>
              <th
                class="issues"
              >
                <span
                  class="cell-wrapper"
                >
                  ISSUES
                </span>
              </th>
              <th
                class="number"
              >
                <span
                  class="cell-wrapper"
                >
                  RETURN REQUESTS
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="lineCell product link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="product-image"
                      style="background-image: url(https://cdn.shopify.com/s/files/1/0220/4008/4552/products/Staple_6pack_77e9f90d-c32d-45d4-aa67-cf5e2c5b3336_100x100.jpg?v=1652759372);"
                    />
                    <h5
                      class="product-name"
                    >
                      The Staple 6-Pack - L
                    </h5>
                  </div>
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  61
                </span>
              </td>
              <td
                class="lineCell issues link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <div>
                    <div>
                      I'm past my expected delivery date
                       (
                      30
                      )
                    </div>
                    <div>
                      I didn't get my refund
                       (
                      30
                      )
                    </div>
                    <div>
                      I'd like to edit my order
                       (
                      1
                      )
                    </div>
                  </div>
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  45
                </span>
              </td>
            </tr>
            <tr>
              <td
                class="lineCell product link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="product-image"
                      style="background-image: url(https://cdn.shopify.com/s/files/1/0220/4008/4552/products/Staple_6pack_77e9f90d-c32d-45d4-aa67-cf5e2c5b3336_100x100.jpg?v=1652759372);"
                    />
                    <h5
                      class="product-name"
                    >
                      The Staple 6-Pack - XL
                    </h5>
                  </div>
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  59
                </span>
              </td>
              <td
                class="lineCell issues link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  <div>
                    <div>
                      I'd like to change the delivery date
                       (
                      30
                      )
                    </div>
                    <div>
                      Other
                       (
                      29
                      )
                    </div>
                  </div>
                </span>
              </td>
              <td
                class="lineCell number link-full-td"
              >
                <span
                  class="cell-wrapper cell-content"
                >
                  11
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelfServiceStatsPage /> should render the stats with the feature preview when there is no data and the features are disabled 1`] = `
<div
  class="full-width wrapper"
>
  <div
    class="header"
    data-candu-id="stat-header-container"
  >
    <div
      class="page-header pageHeader mb-0"
    >
      <h1
        class="align-items-center"
      >
        <span>
          Self-service
        </span>
        <button
          class="wrapper wrapper ml-3 fill secondary medium"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              info_outline
            </i>
            Learn
          </span>
        </button>
      </h1>
      <div>
        <div
          class="d-flex flex-wrap float-right"
        >
          <div
            class="dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
              type="button"
            >
              <span>
                1 store
              </span>
            </button>
            <div
              aria-hidden="true"
              class="dropdown dropdown-menu dropdown-menu-right"
              role="menu"
              tabindex="-1"
            >
              <h6
                class="dropdown-item-input dropdownItemInput dropdown-header"
                tabindex="-1"
              >
                <input
                  class="form-control"
                  placeholder="Search stores..."
                  type="text"
                  value=""
                />
              </h6>
              <button
                class="component dropdown-item"
                role="menuitem"
                tabindex="0"
              >
                <div
                  class="checkbox"
                >
                  <label
                    class="label label quickSelectionOption"
                    for="checkbox-6"
                  >
                    <input
                      checked=""
                      class="input"
                      id="checkbox-6"
                      name="checkbox-6"
                      type="checkbox"
                    />
                    Deselect
                    <div
                      class="badge badge--unselect"
                    >
                      1
                    </div>
                  </label>
                </div>
              </button>
              <div
                class="dropdownDivider dropdown-divider"
                tabindex="-1"
              />
              <div
                class="content"
              />
            </div>
          </div>
          <div>
            <button
              class="wrapper fill secondary medium"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  calendar_today
                </i>
                <span
                  class="wrapper"
                >
                  Feb 02, 2021 - Feb 03, 2021
                  <i
                    class="material-icons icon isRight medium"
                  >
                    arrow_drop_down
                  </i>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="statsWrapper"
  >
    <div
      class="statsContainer container-fluid"
    >
      <div
        class="wrapper"
      >
        <div
          class="metrics"
        >
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Total Self-service interactions
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-total_self_service_interaction_count-0"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  0
                </div>
                <span
                  class="diff"
                  id="value-total_self_service_interaction_count-0"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference neutral"
                    >
                      arrow_forward
                    </i>
                    0
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Self-service automation rate
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-self_service_automation_rate-1"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  0%
                </div>
                <span
                  class="diff"
                  id="value-self_service_automation_rate-1"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference neutral"
                    >
                      arrow_forward
                    </i>
                    0
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Automated Self-service interactions
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-automated_self_service_interaction_count-2"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  0
                </div>
                <span
                  class="diff"
                  id="value-automated_self_service_interaction_count-2"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference neutral"
                    >
                      arrow_forward
                    </i>
                    0
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="metric"
          >
            <div
              class="label"
            >
              Served by an agent after Self-service
              <span>
                <i
                  class="material-icons ml-2 helpIcon info-icon"
                  id="title-not_automated_self_service_interaction_count-3"
                >
                  info_outline
                </i>
              </span>
            </div>
            <div
              class="mt-3 statsDisplay"
            >
              <div>
                <div
                  class="value"
                >
                  0
                </div>
                <span
                  class="diff"
                  id="value-not_automated_self_service_interaction_count-3"
                >
                  <span>
                    <i
                      class="material-icons mr-1 statsDifference neutral"
                    >
                      arrow_forward
                    </i>
                    0
                    %
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="alert error closable noActivityAlert"
      >
        <div
          class="iconContainer"
        >
          <img
            alt="icon"
            src="test-file-stub"
          />
        </div>
        <div
          class="content"
        >
          <span
            class="label"
          >
            There is no Self-service activity. Your Chat or Help Center may not be properly installed.
          </span>
        </div>
        <div
          aria-label="Close Icon"
          class="close"
        >
          <img
            alt="close-icon"
            class="closeIcon"
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Self-service volume per flow
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-md-8 col-lg-9"
          >
            <div>
              <canvas
                height="360"
                role="img"
                width="300"
              />
            </div>
          </div>
          <div
            class="col-sm-12 col-md-4 col-lg-3"
          >
            <div
              class="bar-total-wrapper"
            >
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(29, 120, 107);"
                  />
                  Quick response
                </div>
                <div
                  class="data"
                >
                  0
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(0, 24, 116);"
                  />
                  Article recommendation
                </div>
                <div
                  class="data"
                >
                  0
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(74, 141, 249);"
                  />
                  Track order
                </div>
                <div
                  class="data"
                >
                  0
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(116, 181, 16);"
                  />
                  Report order issue
                </div>
                <div
                  class="data"
                >
                  0
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(143, 44, 175);"
                  />
                  Return order
                </div>
                <div
                  class="data"
                >
                  0
                </div>
              </div>
              <div
                class="bar-total-data-wrapper"
              >
                <div
                  class="label mr-4 mb-2"
                >
                  <span
                    class="circle mr-2"
                    style="background-color: rgb(235, 98, 96);"
                  />
                  Cancel order
                </div>
                <div
                  class="data"
                >
                  0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Quick response performance
            <span>
              <i
                class="material-icons ml-2 helpIcon"
                id="tooltip-self-service-quick-response-performance"
              >
                info_outline
              </i>
            </span>
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <div
          class="align-items-center row"
        >
          <div
            class="float-right"
          >
            <img
              alt="Quick response feature preview"
              class="img-fluid float-right"
              src="/static/private/js/assets/img/presentationals/quick-response-preview.png"
            />
          </div>
          <div
            class="col"
          >
            <div
              class="title"
            >
              Automate up to 14% of interactions with quick response flows
            </div>
            <div
              class="description"
            >
              Enable and customize up to 4 quick response flows at a time in Self-service.
            </div>
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              Check out quick response
            </button>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Article recommendation performance
            <span>
              <i
                class="material-icons ml-2 helpIcon"
                id="tooltip-self-service-article-recommendation-performance"
              >
                info_outline
              </i>
            </span>
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <div
          class="align-items-center row"
        >
          <div
            class="float-right"
          >
            <img
              alt="Article Recommendation feature preview"
              class="img-fluid float-right"
              src="/static/private/js/assets/img/presentationals/article-recommendation-preview.png"
            />
          </div>
          <div
            class="col"
          >
            <div
              class="title"
            >
              Leverage your Help Center to automate tickets
            </div>
            <div
              class="description"
            >
              Enable article recommendation in Chat settings to automatically recommend relevant Help Center articles to shoppers.
            </div>
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              Set up article recommendation
            </button>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Top order issues reported
            <span>
              <i
                class="material-icons ml-2 helpIcon"
                id="tooltip-self-service-top-reported-issues"
              >
                info_outline
              </i>
            </span>
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <div
          class="align-items-center row"
        >
          <div
            class="float-right"
          >
            <img
              alt="Report Issue feature preview"
              class="img-fluid float-right"
              src="/static/private/js/assets/img/presentationals/report-issue-preview.png"
            />
          </div>
          <div
            class="col"
          >
            <div
              class="title"
            >
              Track order issues by enabling the report issue flow
            </div>
            <div
              class="description"
            >
              Enable and customize the report issue flow in Self-service.
            </div>
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              Customize Report Issue Flow
            </button>
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="mb-3 d-flex justify-content-between align-items-baseline"
        >
          <h5
            class="mb-0 d-flex header"
          >
            Products with most issues and return requests
          </h5>
          <button
            class="csvButton btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons mr-1 csvButtonIcon"
            >
              file_download
            </i>
            CSV
          </button>
        </div>
        <div
          class="align-items-center row"
        >
          <div
            class="float-right"
          >
            <img
              alt="Return Order feature preview"
              class="img-fluid float-right"
              src="/static/private/js/assets/img/presentationals/return-order-preview.png"
            />
          </div>
          <div
            class="col"
          >
            <div
              class="title"
            >
              Gain product insights by enabling the report issue and return flows
            </div>
            <div
              class="description"
            >
              Enable and customize these order management flows in Self-service.
            </div>
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              Check out order management flows
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
